lxxstrongstuff/notes-java-stuff.txt
http://www.mneuhold.at/antike/grkconv_en.html
http://www.mneuhold.at/download/greekconverter-060820-src.zip

https://crosswire.org/svn/sword-tools/trunk/modules/lxxm/src/lxxm/LXXMConv.java

[melmoth@pamadio lxxm-gen]$ jar tfv lxxm.jar
   52 Sat Mar 25 16:40:50 CET 2006 META-INF/MANIFEST.MF
    2268 Fri Feb 13 02:15:28 CET 2004 greekconverter/BetacodeToUnicode$BetaSymbol.class
     6998 Fri Feb 13 02:15:30 CET 2004 greekconverter/BetacodeToUnicode.class
      2029 Sat Sep 21 13:46:56 CEST 2002 greekconverter/MessageHandler.class
       2295 Sun Mar 06 11:25:20 CET 2005 greekconverter/README.txt
       44130 Sat Sep 21 13:46:54 CEST 2002 greekconverter/UnicodeToName.class
        2777 Sat Mar 25 16:40:50 CET 2006 lxxm/LXXMConv.class





mkdir javastuff
cd javastuff
mkdir orig
wget http://www.mneuhold.at/download/greekconverter-060820-src.zip
cd orig
unzip ../greekconverter-060820-src.zip
cd ..

mkdir src 
mkdir out
cd orig
for i in `ls *java`; do echo $i; iconv --from-code ISO-8859-16 --to-code=UTF8 $i > ../src/$i ; done
cd ..

javac -d out/ -sourcepath src   src/BetacodeToUnicode.java

complain about UC not define:

src/BetacodeToUnicode.java:67: error: cannot find symbol
    tblChars['!'] = UC.ONE_DOT_LEADER;  // missing letter dot
                    ^
symbol:   variable UC

Let s try to add UC.java then:

javastuff]$ javac -d out/ -sourcepath src   src/BetacodeToUnicode.java src/UC.java

src/BetacodeToUnicode.java:67: error: cannot find symbol
 tblChars['!'] = UC.ONE_DOT_LEADER;  // missing letter dot
  symbol:   variable ONE_DOT_LEADER
  location: class UC

This ONE_DOT_LEADER is not define in the UC class indeed ....



